src/test/ui/conservative_impl_trait.stderr
error[E0277]: the trait bound `(): std::iter::Iterator` is not satisfied
  --> $DIR/conservative_impl_trait.rs:13:33
   |
LL | fn will_ice(something: &u32) -> impl Iterator<Item = &u32> {
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^ `()` is not an iterator; maybe try calling `.iter()` or a similar method
   |
   = help: the trait `std::iter::Iterator` is not implemented for `()`
   = note: the return type of a function must have a statically known size

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
